--- a/ckanext/amplus/assets/sass/_nav.scss
+++ b/ckanext/amplus/assets/sass/_nav.scss
@@ -1,5 +1,5 @@
 .account-masthead {
-  background: @brand-primary;
+  background: $brand-primary;
 
   .account {
     ul {
@@ -7,13 +7,13 @@
         border-left: none;
 
         a{
-          color: @gray-light;
+          color: $gray-light;
           font-weight: inherit;
 
           &:hover,
           &:active {
-            color: @gray-light;
-            background: @brand-quaternary;
+            color: $gray-light;
+            background: $brand-quaternary;
           }
         }
       }
@@ -45,26 +45,26 @@
   &.active {
     >a {
       color: inherit;
-      background-color: @brand-extra-light;
+      background-color: $brand-extra-light;
 
       &:hover {
         color: inherit;
-        background-color: darken(@brand-extra-light, 10%);
+        background-color: darken($brand-extra-light, 10%);
 
         &:before {
-          border-left-color: darken(@brand-extra-light, 10%);
+          border-left-color: darken($brand-extra-light, 10%);
         }
       }
 
       &:before {
-        border-left-color: @brand-extra-light;
+        border-left-color: $brand-extra-light;
       }
     }
   }
 }
 
 .masthead {
-  background: @brand-primary;
+  background: $brand-primary;
   padding: 0;
 
   .navigation {
@@ -72,18 +72,18 @@
       li {
         &.active {
           a {
-            background-color: @brand-quaternary;
+            background-color: $brand-quaternary;
           }
         }
 
         a {
           padding: 2.5rem 2rem;
           border-radius: 0;
-          font-size: @font-size-18;
+          font-size: $font-size-18;
 
           &:hover,
           &:focus {
-            background-color: @brand-quaternary;
+            background-color: $brand-quaternary;
           }
         }
       }
@@ -96,7 +96,7 @@
 
   .logo {
     max-width: 350px;
-    padding: @gutter-sm*2 0 @gutter-sm 2.5rem;
+    padding: $gutter-sm*2 0 $gutter-sm 2.5rem;
 
     >img {
       max-width: 100%;
