--- a/ckanext/amplus/assets/sass/_pages.scss
+++ b/ckanext/amplus/assets/sass/_pages.scss
@@ -1,5 +1,5 @@
 /* ======================================================
-   Edits should be made to .less files
+   Edits should be made to .scss files
    ====================================================== */
 
 .page-list-item .image {
