--- a/ckanext/amplus/assets/sass/_responsive-xs.scss
+++ b/ckanext/amplus/assets/sass/_responsive-xs.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: @breakpoint-xs) {
+@media only screen and (max-width: $breakpoint-xs) {
     .footer-links div{
         padding: 20px 0px;
     }
@@ -23,7 +23,7 @@
         height: auto;
         .stat-content {
           width: 300px;
-          padding: @gutter-lg 0;
+          padding: $gutter-lg 0;
           a {
             width: 100%;
           }
