--- a/ckanext/amplus/assets/sass/_buttons.scss
+++ b/ckanext/amplus/assets/sass/_buttons.scss
@@ -6,19 +6,19 @@
 }
 
 .btn-primary {
-  .btn-primary-reset;
+  @include btn-primary-reset;
 }
 
 .open {
   >.dropdown-toggle {
     &.btn-primary {
-      .btn-primary-reset;
+      @include btn-primary-reset;
     }
   }
 }
 
 .btn-search {
-  background-color: @brand-primary;
+  background-color: $brand-primary;
   padding: 1.4rem 0;
   outline: none;
   border: none;
@@ -26,12 +26,12 @@
 
 .btn-input-search {
   padding: 1.4rem;
-  color: @white;
-  background-color: @brand-primary;
+  color: $white;
+  background-color: $brand-primary;
   border: none;
   outline: none;
 }
 
 .btn-default {
-  .btn-default-reset;
+  @include btn-default-reset;
 }
