--- a/ckanext/amplus/assets/sass/_forms.scss
+++ b/ckanext/amplus/assets/sass/_forms.scss
@@ -1,25 +1,25 @@
 .facet {
-  font-weight: @font-weight-600;
+  font-weight: $font-weight-600;
 }
 
 .filtered.pill {
   border-radius: 0;
   padding: .4rem .8rem;
-  background-color: @brand-extra-light;
-  color: @gray-medium;
+  background-color: $brand-extra-light;
+  color: $gray-medium;
   margin: .5rem .2rem;
 
   a {
-    color: @gray-medium;
+    color: $gray-medium;
   }
 }
 
 .primary {
   .search-form {
-    .flex;
-    .flex-align-center;
-    .flex-justify-between;
-    .flex-wrap;
+    @include flex;
+    @include flex-align-center;
+    @include flex-justify-between;
+    @include flex-wrap;
     border-bottom: none;
 
     >* {
@@ -29,7 +29,7 @@
 
     >*:first-child {
       order: -2;
-      box-shadow: @shadow-light;
+      box-shadow: $shadow-light;
       min-width: 50%;
       width: 50%;
     }
@@ -40,16 +40,16 @@
 
     >h1 {
       order: -1;
-      color: @brand-secondary;
-      font-weight: @font-weight-600;
+      color: $brand-secondary;
+      font-weight: $font-weight-600;
       padding-left: 2rem;
       margin-bottom: 30px;
       margin-top: 0;
     }
 
     .control-order-by {
-      .flex;
-      .flex-justify-end;
+      @include flex;
+      @include flex-justify-end;
       margin-left: 0;
       position: relative;
 
@@ -61,8 +61,8 @@
         position: absolute;
         right: 16px;
         border-style: solid;
-        background: @white;
-        border-color: transparent @gray-medium;
+        background: $white;
+        border-color: transparent $gray-medium;
         pointer-events: none;
         transform: rotate(90deg)
       }
@@ -85,7 +85,7 @@
 
       select {
         height: 46px;
-        box-shadow: @shadow-light;
+        box-shadow: $shadow-light;
         padding-right: 4rem;
         -webkit-appearance: none;
         -moz-appearance: none;
