--- a/ckanext/amplus/assets/sass/_responsive-sm.scss
+++ b/ckanext/amplus/assets/sass/_responsive-sm.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: @breakpoint-sm) {
+@media only screen and (max-width: $breakpoint-sm) {
     .footer-links div{
         padding: 20px 0px;
     }
