--- a/ckanext/amplus/assets/sass/_responsive-sm.scss
+++ b/ckanext/amplus/assets/sass/_responsive-sm.scss
@@ -10,7 +10,7 @@
             padding: 100px 50px;
         }
     }
-    .navbar-toggle{
+    .navbar-toggler{
         margin-right: 15px;
     }
 
