--- a/ckanext/amplus/templates/header.html
+++ b/ckanext/amplus/templates/header.html
@@ -20,7 +20,7 @@
   {% endblock %}
 
       <div class="navbar-right">
-        <button data-target="#main-navigation-toggle" data-toggle="collapse" class="navbar-toggle collapsed"
+        <button data-target="#main-navigation-toggle" data-toggle="collapse" class="navbar-toggler collapsed"
           type="button">
           <span class="fa fa-bars"></span>
         </button>
