--- a/ckanext/amplus/assets/sass/_mixins.scss
+++ b/ckanext/amplus/assets/sass/_mixins.scss
@@ -19,7 +19,7 @@
 
   &:hover {
     border-color: transparent;
-    background-color: darken($white, 3%);
+    background-color: shade-color($white, 3%);
   }
 }
 
