--- a/ckanext/amplus/assets/sass/_customizing-theme.scss
+++ b/ckanext/amplus/assets/sass/_customizing-theme.scss
@@ -7,6 +7,7 @@ $custom-theme-colors: (
     "light": $brand-light,
     "dark": $brand-dark,
     "tertiary": $brand-tertiary,
+    "quaternary": $brand-quaternary,
     "extra-light": $brand-extra-light,
     "bg-primary": $brand-background,
     "text-dark": $text-dark,
