--- a/ckanext/amplus/assets/sass/_facet-list.scss
+++ b/ckanext/amplus/assets/sass/_facet-list.scss
@@ -1,6 +1,6 @@
 .module-heading {
-  color: $brand-primary;
-  background-color: $brand-background;
+  color: $primary;
+  background-color: $bg-primary;
   border: none;
   padding: 1.5rem;
   font-size: $font-size-17;
@@ -8,7 +8,7 @@
   
 }
 .side-heading{
-  color: $brand-primary;
+  color: $primary;
   font-weight: $font-weight-600;
   margin: 1rem 0;
 }
