--- a/ckanext/amplus/assets/sass/_footer.scss
+++ b/ckanext/amplus/assets/sass/_footer.scss
@@ -21,7 +21,7 @@
 }
 
 @mixin footer-nav-title {
-  color: $brand-secondary;
+  color: $secondary;
   font-size: $font-size-18;
   font-weight: $font-weight-600;
 }
