--- a/ckanext/amplus/assets/sass/_navigation-tabs.scss
+++ b/ckanext/amplus/assets/sass/_navigation-tabs.scss
@@ -35,10 +35,10 @@
 
     >.btn-danger {
       color: $white;
-      background-color: $brand-tertiary;
+      background-color: $tertiary;
 
       &:hover {
-        background-color: $brand-tertiary-light;
+        background-color: $tertiary-light;
       }
     }
   }
