--- a/ckanext/amplus/assets/sass/_promoted.scss
+++ b/ckanext/amplus/assets/sass/_promoted.scss
@@ -19,7 +19,7 @@
   .page-heading {
     padding-top: 30px;
     font-size: $font-size-50;
-    color: $brand-primary;
+    color: $primary;
   }
 
   .promoted-desc {
