--- a/ckanext/amplus/assets/sass/_typography.scss
+++ b/ckanext/amplus/assets/sass/_typography.scss
@@ -23,7 +23,7 @@
   }
 }
 .module .read-more {
-  color: $brand-primary;
+  color: $primary;
   font-size: $font-size-13;
   font-weight: $font-weight-600;
   text-decoration: underline;
