--- a/ckanext/amplus/assets/sass/_breadcrumb.scss
+++ b/ckanext/amplus/assets/sass/_breadcrumb.scss
@@ -23,13 +23,13 @@
 
       &.active {
         >a {
-          color: $brand-primary;
+          color: $primary;
           font-weight: $font-weight-400;
         }
       }
 
       .active {
-        color: $brand-primary;
+        color: $primary;
         font-weight: $font-weight-400;
       }
     }
