--- a/ckanext/amplus/assets/sass/_buttons.scss
+++ b/ckanext/amplus/assets/sass/_buttons.scss
@@ -18,7 +18,7 @@
 }
 
 .btn-search {
-  background-color: $brand-primary;
+  background-color: $primary;
   padding: 1.4rem 0;
   outline: none;
   border: none;
@@ -27,7 +27,7 @@
 .btn-input-search {
   padding: 1.4rem;
   color: $white;
-  background-color: $brand-primary;
+  background-color: $primary;
   border: none;
   outline: none;
 }
