--- a/ckanext/amplus/assets/sass/_data.scss
+++ b/ckanext/amplus/assets/sass/_data.scss
@@ -35,7 +35,7 @@
     .dataset-heading a {
       font-size: $font-size-21;
       font-weight: $font-weight-600;
-      color: $brand-secondary;
+      color: $secondary;
     }
   }
 
