--- a/ckanext/amplus/assets/sass/_forms.scss
+++ b/ckanext/amplus/assets/sass/_forms.scss
@@ -5,7 +5,7 @@
 .filtered.pill {
   border-radius: 0;
   padding: .4rem .8rem;
-  background-color: $brand-extra-light;
+  background-color: $extra-light;
   color: $gray-medium;
   margin: .5rem .2rem;
 
@@ -40,7 +40,7 @@
 
     >h1 {
       order: -1;
-      color: $brand-secondary;
+      color: $secondary;
       font-weight: $font-weight-600;
       padding-left: 2rem;
       margin-bottom: 30px;
