--- a/ckanext/amplus/assets/sass/_mixins.scss
+++ b/ckanext/amplus/assets/sass/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin btn-primary-reset {
   color: $white;
-  background-color: $brand-primary;
+  background-color: $primary;
   border-radius: 0;
 
   &:hover,
@@ -9,7 +9,7 @@
   &:active:focus,
   &.focus {
     border-color: transparent;
-    background-color: $brand-dark;
+    background-color: $dark;
   }
 }
 
@@ -25,7 +25,7 @@
 
 @mixin hover-box {
   border-radius: 0;
-  box-shadow: 0 0 10px 0 fade($brand-primary, 30%);
+  box-shadow: 0 0 10px 0 fade($primary, 30%);
 }
 
 @mixin content-margin-fix {
