--- a/ckanext/amplus/assets/sass/_variables.scss
+++ b/ckanext/amplus/assets/sass/_variables.scss
@@ -46,6 +46,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$mojaBoja: #dc3545 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -62,7 +63,7 @@ $colors: (
   "cyan":       $cyan,
   "white":      $white,
   "gray":       $gray-600,
-  "gray-dark":  $gray-800
+  "gray-dark":  $gray-800,
 ) !default;
 // scss-docs-end colors-map
 
