--- a/ckanext/amplus/assets/sass/_visualize.scss
+++ b/ckanext/amplus/assets/sass/_visualize.scss
@@ -52,14 +52,14 @@
 }
 
 .group-container {
-  background: $brand-background;
+  background: $bg-primary;
   padding: 100px 140px;
 
   .toggle-section {
     padding-bottom: 100px;
 
     .active {
-      border-bottom: 4px solid $brand-secondary;
+      border-bottom: 4px solid $secondary;
 
       >a {
         background: transparent;
@@ -71,7 +71,7 @@
       }
 
       .toggle-view {
-        color: $brand-secondary;
+        color: $secondary;
       }
     }
 
