--- a/ckanext/amplus/assets/sass/_forms.scss
+++ b/ckanext/amplus/assets/sass/_forms.scss
@@ -102,6 +102,7 @@
         height: 46px;
         box-shadow: $shadow-light;
         padding-right: 4rem;
+        background: $white;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
