--- a/ckanext/amplus/assets/sass/_typography.scss
+++ b/ckanext/amplus/assets/sass/_typography.scss
@@ -5,6 +5,8 @@
 
 .form-control,
 .controls .form-control {
+  font-size: $font-size-14;
+
   background-color: $white;
   border: none;
   border-radius: 0;
