--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -13242,6 +13242,7 @@ a:hover, a:focus, a:active {
   height: 46px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   padding-right: 4rem;
+  padding-left: 1rem;
   background: #fff;
   -webkit-appearance: none;
   -moz-appearance: none;
