--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -12748,6 +12748,8 @@ body .primary {
   border: none;
   border-radius: 0;
   background-color: #fff;
+  width: fit-content;
+  height: 34px;
 }
 
 a {
