Add green background on open label

--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -12423,6 +12423,10 @@ textarea.form-control-lg {
   display: none;
 }
 
+.label-open {
+  background-color: green;
+}
+
 .module-heading {
   color: #6033A7;
   background-color: #EFECF4;
