--- a/ckanext/amplus/assets/sass/_footer.scss
+++ b/ckanext/amplus/assets/sass/_footer.scss
@@ -20,7 +20,7 @@
   margin-top: 25px;
 }
 
-@mixin footer-nav-title {
+.footer-nav-title {
   color: $secondary;
   font-size: $font-size-18;
   font-weight: $font-weight-600;
