--- a/ckanext/amplus/assets/css/custom.css
+++ b/ckanext/amplus/assets/css/custom.css
@@ -12423,10 +12423,6 @@ textarea.form-control-lg {
   display: none;
 }
 
-.label-open {
-  background-color: green;
-}
-
 .form-actions .btn-danger {
   color: #fff;
   background-color: #d43f3a;
@@ -13334,6 +13330,53 @@ a:hover, a:focus, a:active {
   font-weight: 400;
   padding: 0px 20px 20px 20px;
   margin: 0;
+}
+
+.label-open {
+  background-color: green;
+}
+
+.badge[data-format=xml] {
+  background-color: #d43f3a;
+}
+
+.badge[data-format=html] {
+  background-color: #2E759E;
+}
+
+.badge[data-format=json] {
+  background-color: #D63B00;
+}
+
+.badge[data-format=text] {
+  background-color: #1A7EA3;
+}
+
+.badge[data-format=csv] {
+  background-color: #856A00;
+}
+
+.badge[data-format=xls] {
+  background-color: #207E42;
+}
+
+.badge[data-format=zip] {
+  background-color: #686868;
+}
+
+.badge[data-format=api] {
+  background-color: #D22D81;
+}
+
+.badge[data-format=pdf] {
+  background-color: #e0051e;
+}
+
+.badge[data-format=rdf],
+.badge[data-format=nquad],
+.badge[data-format=ntriples],
+.badge[data-format=turtle] {
+  background-color: #0b4498;
 }
 
 /*# sourceMappingURL=custom.css.map */
