--- a/ckanext/amplus/templates/snippets/search_form.html
+++ b/ckanext/amplus/templates/snippets/search_form.html
@@ -2,8 +2,8 @@
 
 {% block search_sortby %}
   {% if sorting %}
-    <div class="form-group control-order-by">
-      <select id="field-order-by" name="sort" class="form-control form-select">
+    <div class="form-group">
+      <select id="field-order-by" name="sort" class="form-select select">
         {% for label, value in sorting %}
           {% if label and value %}
             <option value="{{ value }}"{% if sorting_selected == value %} selected="selected"{% endif %}>{{ label }}</option>
