--- a/ckanext/amplus/assets/sass/custom.scss
+++ b/ckanext/amplus/assets/sass/custom.scss
@@ -29,7 +29,7 @@
 @import "_group.scss";
 @import "_footer.scss";
 
-@import "_responsive-xs.scss";
+@import "_responsive-md.scss";
 @import "_responsive-xl.scss";
 @import "_responsive-lg.scss";
 @import "_responsive-sm.scss";
