--- a/ckanext/amplus/assets/sass/_responsive-md.scss
+++ b/ckanext/amplus/assets/sass/_responsive-md.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: $breakpoint-xs) {
+@include media-breakpoint-down(md)  {
     .footer-links div{
         padding: 20px 0px;
     }
