--- a/ckanext/amplus/assets/sass/_responsive-xl.scss
+++ b/ckanext/amplus/assets/sass/_responsive-xl.scss
@@ -1,1 +1,92 @@
-@media (min-width: $breakpoint-xl) {}
+@include media-breakpoint-up(xl)  {
+  body {
+    & [role=main] {
+      .secondary {
+        padding: $gutter-lg;
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(xl)  {
+
+    .stats-wrapper:before, .stats-wrapper:after, .middle:before, .middle:after {
+      display: none;
+    }
+
+    .attribution {
+        text-align: center;
+        padding: $gutter-lg;
+    }
+    .footer-links {
+        // float: none;
+        text-align: center;
+    }
+    .data{
+      .visualize-card{
+        flex-basis: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+    .homepage .group-container .toggle-section div {
+        border: none;
+    }
+
+    .footer-links {
+      float: none;
+      text-align: center;
+    }
+
+    .masthead .navigation .nav-pills.nav {
+      >li {
+        a {
+          padding: 2.2rem .8rem;
+          font-size: $font-size-15;
+
+          img {
+            max-width: 18px;
+            max-height: 18px;
+          }
+        }
+      }
+    }
+
+    .masthead .logo {
+      max-width: 250px;
+    }
+
+    >.control-order-by {
+      padding-right: 0;
+    }
+
+    .search-input-group {
+      margin-bottom: 2rem;
+    }
+
+    .primary {
+      .search-form {
+        >* {
+          min-width: 50%;
+          width: 50%;
+        }
+
+        >*:first-child {
+          min-width: 100%;
+          width: 100%;
+          flex: 1 0 50%;
+        }
+        >h2{
+        padding-left: 0;
+
+        >.control-order-by {
+          padding-right: 0;
+        }
+      }
+    }
+  }
+  .media-grid .media-item,
+  .resource-list .resource-item{
+    width: calc(100% - $gutter-sm*2);
+  }
+}
