--- a/ckanext/amplus/assets/sass/custom.scss
+++ b/ckanext/amplus/assets/sass/custom.scss
@@ -31,7 +31,7 @@
 
 @import "_responsive-md.scss";
 @import "_responsive-xl.scss";
-@import "_responsive-sm.scss";
+@import "_responsive-lg.scss";
 
 @import "_forms.scss";
 @import "_insights.scss";
