--- a/ckanext/amplus/assets/sass/_responsive-xl.scss
+++ b/ckanext/amplus/assets/sass/_responsive-xl.scss
@@ -1,92 +1,101 @@
-@include media-breakpoint-up(xl)  {
+@include media-breakpoint-up(xl) {
   body {
-    & [role=main] {
+    & [role="main"] {
       .secondary {
         padding: $gutter-lg;
       }
     }
   }
+  .primary {
+    .search-form {
+      > h1 {
+        padding-left: 2rem;
+      }
+    }
+  }
 }
 
-@include media-breakpoint-down(xl)  {
+@include media-breakpoint-down(xl) {
+  .stats-wrapper:before,
+  .stats-wrapper:after,
+  .middle:before,
+  .middle:after {
+    display: none;
+  }
 
-    .stats-wrapper:before, .stats-wrapper:after, .middle:before, .middle:after {
-      display: none;
+  .attribution {
+    text-align: center;
+    padding: $gutter-lg;
+  }
+  .footer-links {
+    // float: none;
+    text-align: center;
+  }
+  .data {
+    .visualize-card {
+      flex-basis: 100%;
+      margin-left: auto;
+      margin-right: auto;
     }
+  }
+  .homepage .group-container .toggle-section div {
+    border: none;
+  }
 
-    .attribution {
-        text-align: center;
-        padding: $gutter-lg;
-    }
-    .footer-links {
-        // float: none;
-        text-align: center;
-    }
-    .data{
-      .visualize-card{
-        flex-basis: 100%;
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-    .homepage .group-container .toggle-section div {
-        border: none;
-    }
+  .footer-links {
+    float: none;
+    text-align: center;
+  }
 
-    .footer-links {
-      float: none;
-      text-align: center;
-    }
+  .masthead .navigation .nav-pills.nav {
+    > li {
+      a {
+        padding: 2.2rem 0.8rem;
+        font-size: $font-size-15;
 
-    .masthead .navigation .nav-pills.nav {
-      >li {
-        a {
-          padding: 2.2rem .8rem;
-          font-size: $font-size-15;
-
-          img {
-            max-width: 18px;
-            max-height: 18px;
-          }
+        img {
+          max-width: 18px;
+          max-height: 18px;
         }
       }
     }
+  }
 
-    .masthead .logo {
-      max-width: 250px;
-    }
+  .masthead .logo {
+    max-width: 250px;
+  }
 
-    >.control-order-by {
-      padding-right: 0;
-    }
+  > .control-order-by {
+    padding-right: 0;
+  }
 
-    .search-input-group {
-      margin-bottom: 2rem;
-    }
+  .search-input-group {
+    margin-bottom: 2rem;
+  }
 
-    .primary {
-      .search-form {
-        >* {
-          min-width: 50%;
-          width: 50%;
-        }
+  .primary {
+    .search-form {
+      > * {
+        min-width: 50%;
+        width: 50%;
+      }
 
-        >*:first-child {
-          min-width: 100%;
-          width: 100%;
-          flex: 1 0 50%;
-        }
-        >h2{
+      > *:first-child {
+        min-width: 100%;
+        width: 100%;
+        flex: 1 0 50%;
+      }
+      > h2 {
         padding-left: 0;
 
-        >.control-order-by {
+        > .control-order-by {
           padding-right: 0;
         }
       }
     }
   }
   .media-grid .media-item,
-  .resource-list .resource-item{
-    width: calc(100% - $gutter-sm*2);
+  .resource-list .resource-item {
+    width: calc(100% - $gutter-sm * 2);
   }
 }
